--- a/Tetris.html
+++ b/Tetris.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
 <head>
     <meta charset="utf-8">
-    <title>Tetris 2D</title>
+    <title>Tetris</title>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
